Fix Open Graph title encoding for consistency

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="MỸ ANH & ĐINH TUẤN" />
+    <meta property="og:title" content="Mỹ Anh & Đinh Tuấn" />
     <meta property="og:description" content="Thiệp cưới online của chú rể Đinh Tuấn và cô dâu Mỹ Anh" />
     <meta property="og:image" content="/assets/image/og-image.JPG" />
     <meta property="og:url" content="https://wedding-myanh-dinhtuan.vercel.app" />
