--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Open Graph -->
-<meta property="og:title" content="Mỹ Anh & Đình Tuấn" />
-<meta property="og:description" content="Thiệp cưới online của chú rể Đình Tuấn và cô dâu Mỹ Anh" />
+<meta property="og:title" content="Mỹ Anh & Đinh Tuấn" />
+<meta property="og:description" content="Thiệp cưới online của chú rể Đinh Tuấn và cô dâu Mỹ Anh" />
 <meta property="og:image" content="https://wedding-myanh-dinhtuan.vercel.app/assets/image/og-image.JPG" />
 <meta property="og:url" content="https://wedding-myanh-dinhtuan.vercel.app" />
 <meta property="og:type" content="website" />
