--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
 
                         <div class="invite-family invite-family--groom">
                             <p class="family-title">NHÀ TRAI</p>
-                            <p>ÔNG: Đinh Văn Tính</p>
-                            <p>BÀ: Nguyễn Thị Tính</p>
+                            <p>ÔNG: Đinh Văn Tỉnh</p>
+                            <p>BÀ: Nguyễn Thị Tỉnh</p>
                         </div>
                     </div>
 
